have ability to oploadimages and maybe post

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1623.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
     "next": "14.2.2",
     "nodemailer": "^6.9.13",
     "react": "^18",
